[gd_scene load_steps=9 format=3 uid="uid://d3hrv55380bm4"]

[ext_resource type="Script" path="res://GUI/pause_menu/pause_menu.gd" id="1_uxo6m"]
[ext_resource type="FontFile" uid="uid://cy0vvuaq5a3dr" path="res://GUI/fonts/DePixelSchmal.ttf" id="2_lunck"]
[ext_resource type="Texture2D" uid="uid://ducbkc4o5j2c3" path="res://Items/sprites/items.png" id="3_j2ai5"]
[ext_resource type="PackedScene" uid="uid://dclp3busqqg3f" path="res://GUI/pause_menu/Inventory/inventory_slot.tscn" id="4_lesai"]
[ext_resource type="Script" path="res://GUI/pause_menu/Inventory/scripts/inventory_ui.gd" id="4_pc488"]
[ext_resource type="Resource" uid="uid://dn1u5oohi4y1y" path="res://GUI/pause_menu/Inventory/player_inventory.tres" id="5_pf6vg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v5bvu"]
atlas = ExtResource("3_j2ai5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r6tde"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_v5bvu")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_uxo6m")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0064, 0.01, 0.0055, 0.454902)

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -224.0
offset_top = 29.0
offset_right = -77.0
offset_bottom = 71.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_lunck")
theme_override_font_sizes/font_size = 30
text = "[ paused ]"

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -372.0
offset_top = -123.0
offset_right = 60.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_r6tde")

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer"]
layout_mode = 2
columns = 6
script = ExtResource("4_pc488")
data = ExtResource("5_pf6vg")

[node name="InventorySlot" parent="Control/PanelContainer/GridContainer" instance=ExtResource("4_lesai")]
layout_mode = 2

[node name="InventorySlot7" parent="Control/PanelContainer/GridContainer" instance=ExtResource("4_lesai")]
layout_mode = 2

[node name="InventorySlot8" parent="Control/PanelContainer/GridContainer" instance=ExtResource("4_lesai")]
layout_mode = 2

[node name="InventorySlot9" parent="Control/PanelContainer/GridContainer" instance=ExtResource("4_lesai")]
layout_mode = 2

[node name="InventorySlot10" parent="Control/PanelContainer/GridContainer" instance=ExtResource("4_lesai")]
layout_mode = 2

[node name="Info Box" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 84.0
offset_top = -160.0
offset_right = 440.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_r6tde")

[node name="VBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -316.0
offset_top = -104.0
offset_right = 7.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0

[node name="Button_Save" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_lunck")
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="Button_Load" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_lunck")
theme_override_font_sizes/font_size = 30
text = "Load"

[node name="Button_Menu" type="Button" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_lunck")
theme_override_font_sizes/font_size = 30
text = "Menu"

[node name="ItemDescription" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 99.0
offset_top = 113.0
offset_right = 421.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_lunck")
theme_override_font_sizes/font_size = 15
autowrap_mode = 2

[node name="ItemName" type="Label" parent="Control"]
layout_mode = 0
offset_left = 558.0
offset_top = 61.0
offset_right = 894.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 30
autowrap_mode = 2

[node name="ItemIcon" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 603.0
offset_top = 153.0
offset_right = 843.0
offset_bottom = 383.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
max_polyphony = 4
